--- a/FrontEnd/login/login.html
+++ b/FrontEnd/login/login.html
@@ -36,6 +36,7 @@
 			<h2>Contact</h2>
 			<p>Vous avez un projet ? Discutons-en !</p>
 			<form action="#" method="post">
+				<p class="error_message"></p>
 				<label for="email">E-mail</label>
 				<input type="email" name="email" id="email">
 				<label for="name">Mot de passe </label>
