--- a/FrontEnd/login/login.html
+++ b/FrontEnd/login/login.html
@@ -17,10 +17,10 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="#projet">Projet</a>
+					<a href="../#portfolio">Projet</a>
 				</li>
 				<li>
-					<a href="#contact">Contact</a>
+					<a href="../#contact">Contact</a>
 				</li>
 				<li>login</li>
 				<li>
