--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -59,7 +59,7 @@
 					<p>Modifier</p>
 				</div>
 			</div>
-			<aside class="modal-container" aria-hidden="true">
+			<aside class="modal-container">
 				<div class= "modal-wrapper">
 					<span><i class="fa-solid fa-xmark"></i></span>
 					<h3>Galerie photo</h3>
