--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -60,13 +60,32 @@
 				</div>
 			</div>
 			<aside class="modal-container">
-				<div class= "modal-wrapper">
+				<div class= "list_gallery">
 					<span><i class="fa-solid fa-xmark"></i></span>
 					<h3>Galerie photo</h3>
 					<div class="gallery-modal">
 					</div>
 					<hr>
 					<button>Ajouter une photo</button>
+				</div>
+				<div class="upload_gallery">
+					<span><i class="fa-solid fa-arrow-left"></i></span>
+					<span><i class="fa-solid fa-xmark"></i></span>
+					<h3>Ajout photo</h3>
+					<form action="#" method="post">
+						<div class="add_gallery">
+							<span><i class="fa-regular fa-image"></i></span>
+							<label for="image">+ Ajouter photo</label>
+							<input type="file" name="file" id="image">
+							<p>jpg, png : 4mo max</p>
+						</div>
+						<label for="title">Titre</label>
+						<input type="text" name="title" id="title">
+						<label for="category">Catégories</label>
+						<select name="category" id="category"></select>
+						<hr>
+						<input type="submit" value="Valider">
+					</form>
 				</div>
 			</aside>
 			<div class="gallery">
