gestion de chargement de photo 'filereader'

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -76,7 +76,7 @@
 						<div class="add_gallery">
 							<span><i class="fa-regular fa-image"></i></span>
 							<label for="image">+ Ajouter photo</label>
-							<input type="file" name="file" id="image">
+							<input type="file" name="image" id="image" accept="image/png,image/jpeg">
 							<p>jpg, png : 4mo max</p>
 						</div>
 						<label for="title">Titre</label>
